Removed un-used classes and configuration and did a little re-factoring.
git-svn-id: http://ikube.googlecode.com/svn/trunk@756 89a0fb20-889e-aefa-90f6-7c296b20d5cf